k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: travel-flight-fe
  labels:
    app: travel-flight-fe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: travel-flight-fe
  template:
    metadata:
      labels:
        app: travel-flight-fe
    spec:
      containers:
        - name: travel-flight-fe
          image: mirza601/travel-flight-fe:REPLACE_ME_TAG
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
