k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: travel-flight-fe-service
spec:
  selector:
    app: travel-flight-fe
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
